@@ -1,5 +1,8 @@
 2005-11-08  Johan Dahlin  <jdahlin@async.com.br>
 
+	* kiwi/ui/widgets/proxy.py (WidgetMixinSupportValidation.don): Wait until 
+	the completion is done to set the text.
+
 	* kiwi/ui/gazpacholoader.py (EntryDataType.get_data_types): Add Object, 
 	useful when using entry completion.
 
